<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:weightSum="1">
    <!--android:background="@drawable/shanra" -->
   <TextView
       android:layout_width="353dp"
       android:layout_height="wrap_content"
       android:id="@+id/redies"
       android:text="@string/laurel"
       android:textSize="90dp"
       android:layout_weight="0.13"
       android:layout_gravity="center"
       android:layout_marginLeft="30dp"
       android:layout_centerVertical="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentRight="true"
       android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/internet"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_below="@+id/redies"
        android:layout_alignLeft="@+id/redies"
        android:layout_alignStart="@+id/redies"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerdby"
        android:textColor="@color/powerdby"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:typeface="serif"/>


</RelativeLayout>