<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background_material_light"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_margin_height"
        android:layout_marginTop="@dimen/card_mrgin_top"
        android:layout_marginLeft="@dimen/card_margin_left_right"
        android:layout_marginRight="@dimen/card_margin_left_right"
        card_view:cardUseCompatPadding="true"
        android:background="@color/cardview_light_background"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accountlogin"
                android:gravity="center"

                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/textview_margin"
                android:textSize="@dimen/textview_text_size"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/f_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/username"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/pass_margin_left"
                    android:id="@+id/user"
                    android:layout_marginTop="@dimen/layout_marginTop"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/f_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textStyle="bold"

                    android:layout_marginLeft="@dimen/pass_margin_left"
                    android:layout_marginTop="@dimen/margin_pass_top"
                    android:id="@+id/password"/>
            </android.support.design.widget.TextInputLayout>


            <Button

                android:layout_width="@dimen/width_button"
                android:layout_height="wrap_content"
                android:text="@string/button_submit"
                android:id="@+id/button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginTop="@dimen/margin_pass_top"
                android:layout_gravity="center_vertical"
                android:textColor="@color/button_text_color"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/powerdby"
        android:textColor="@color/powerdby"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:typeface="serif"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
